@@ -1,6 +1,8 @@
 pghoard 1.0.1 (2016-XX-XX)
 ==========================
 
+* Consider last basebackup's start time instead of completion time for
+  scheduling the next basebackup
 * pghoard_create_keys can now update an existing configuration file
 * Support for OpenStack Swift object storage
 * More generic object storage configuration.  All configuration keys for
